Save: fw AS923 19200 public network

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,7 @@
     "C_Cpp.default.cStandard": "c11",
     "terminal.integrated.shell.windows": "C:\\Windows\\sysnative\\cmd.exe",
     "files.associations": {
-        "ranges": "c"
+        "ranges": "c",
+        "string": "c"
     }
 }
