--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "lib/loramac-node"]
 	path = lib/loramac-node
-	url = https://github.com/lora-net/loramac-node.git
+	url = git@github.com:janakj/LoRaMac-node
