--- a/python/setup.cfg
+++ b/python/setup.cfg
@@ -2,9 +2,12 @@
 name = lora-modem-abz
 version = 1.0.0
 description = Python library for the Murata TypeABZ LoRaWAN modem
+long_description = file: README.md
 url = https://github.com/hardwario/lora-modem-abz
 author = Jan Janak
 author_email = jan@janakj.org
+license = BSD 3-Clause License
+license_file = LICENSE
 
 [options]
 install_requires =
