Update Python library packaging

--- a/python/setup.cfg
+++ b/python/setup.cfg
@@ -1,13 +1,14 @@
 [metadata]
 name = lora-modem-abz
-version = 1.0.0
+version = file: VERSION
 description = Python library for the Murata TypeABZ LoRaWAN modem
 long_description = file: README.md
+long_description_content_type = text/markdown
 url = https://github.com/hardwario/lora-modem-abz
 author = Jan Janak
 author_email = jan@janakj.org
 license = BSD 3-Clause License
-license_file = LICENSE
+license_files = [ LICENSE ]
 
 [options]
 install_requires =
